--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.1.8.RELEASE</version>
+        <relativePath/> 
     </parent>
     <groupId>com.seanhed</groupId>
     <artifactId>exercise</artifactId>
